Adicionando scroll no menu

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#about">NOVOS</a></li>
+                    <li><a class="nav-link scroll" href="#showroom">NOVOS</a></li>
                     <li><a href="#about">SEMI-NOVOS</a></li>
-                    <li><a href="#about">PEÇA E ACESSÓRIOS</a></li>
-                    <li><a href="#about">CONSÓRCIO</a></li>
+                    <li><a class="nav-link scroll" href="#servicos">PEÇA E ACESSÓRIOS</a></li>
+                    <li><a class="nav-link scroll" href="#consorcio-seguros"">CONSÓRCIO</a></li>
                     <li><a href="#about">TEST DRIVE</a></li>
-                    <li><a href="#about">AGENDAMENTO</a></li>
+                    <li><a class="nav-link scroll" href="#servicos">AGENDAMENTO</a></li>
                     <li><a href="#about">VENDA DIRETA</a></li>
-                    <li><a href="#about">SOBRE</a></li>
-                    <li><a href="#about">FALE CONOSCO</a></li>
+                    <li><a class="nav-link scroll" href="#vega-kia">SOBRE</a></li>
+                    <li><a class="nav-link scroll" href="#showroom">FALE CONOSCO</a></li>
 
             </div>
             <!--/.nav-collapse -->
@@ -113,7 +113,7 @@
     </section>
 
     <!-- showroom -->
-    <section>
+    <section id="showroom">
         <div class="container">
             <div class="row">
 
