--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
-
     <link rel="stylesheet" href="assets/css/flexslider.css">
     <link rel="stylesheet" href="assets/css/custom-flexslider.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style-mobile.css">
     <title>VEGA KIA</title>
     <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon.png">
 </head>
@@ -31,6 +28,7 @@
         </div>
     </div>
 
+    <!-- Header -->
     <div class="header_info">
         <div class="container">
             <div class="container_header">
@@ -39,16 +37,16 @@
                     <img class="logo_kia" src="assets/images/logo_kia.svg" alt="LOGO_KIA">
                 </div>
                 <div style="width: 44%;">
-                    <p class="btn"><i class="fa fa-map-marker"></i> BR, KM 1</p>
+                    <p class="btn d-sm-none"><i class="fa fa-map-marker"></i> BR, KM 1</p>
                 </div>
                 <div>
-                    <a href="#" class="btn btn-success btn--success">COMPRE AGORA! <i class="fa fa-whatsapp"></i></a>
+                    <a href="#" class="btn btn-success btn--success d-sm-none">COMPRE AGORA! <i class="fa fa-whatsapp"></i></a>
                 </div>
                 <div>
-                    <a href="#" class="btn btn-default btn--dark"><i class="fa fa-phone-square"></i> 91 - 3245.2564
+                    <a href="#" class="btn btn-default d-sm-none btn--dark"><i class="fa fa-phone-square"></i> 91 - 3245.2564
                     </a>
                 </div>
-                <div><input type="text" name="search" class="form-control"></div>
+                <div><input type="text" name="search" class="form-control d-sm-none"></div>
             </div>
 
         </div>
@@ -78,14 +76,24 @@
                     <li><a href="#about">VENDA DIRETA</a></li>
                     <li><a class="nav-link scroll" href="#vega-kia">SOBRE</a></li>
                     <li><a class="nav-link scroll" href="#showroom">FALE CONOSCO</a></li>
+                    <li>
+                        <a href="#" class="btn btn-success btn--success d-sm-block d-md-none">COMPRE AGORA! <i class="fa fa-whatsapp"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn btn-default btn--dark d-sm-block d-md-none"><i class="fa fa-phone-square"></i> 91 - 3245.2564
+                    </a>
+                    </li>
+                    <li>
+                        <input type="text" name="search" class="form-control d-sm-block d-md-none"></div>
+                    </li>
 
             </div>
             <!--/.nav-collapse -->
         </div>
     </nav>
 
+    <!-- Flexslider -->
     <div class="container_default">
-        <!-- Place somewhere in the <body> of your page -->
         <div id="slider" class="flexslider">
             <ul class="slides">
                 <li>
@@ -106,7 +114,6 @@
                 <li>
                     <img src="assets/images/kia_card-tout_telluride.jpg" />
                 </li>
-                <!-- items mirrored twice, total of 12 -->
             </ul>
         </div>
 
@@ -119,7 +126,7 @@
             </a>
         </div>
 
-        <div id="carousel" class="flexslider">
+        <div id="carousel" class="flexslider d-sm-none">
             <ul class="slides">
                 <li>
                     <img src="assets/images/kiasorento2014 (1).jpg"" />
@@ -143,26 +150,6 @@
         </div>
     </div>
 
-
-
-    <!-- Carousel -->
-    <!-- 
-    <div class="wrap_carousel">
-
-        <div id="owl-demo" class="owl-carousel owl-theme">
-
-            <div class="item"><img src="assets/images/1637093221182.jpeg" alt="The Last of us"></div>
-            <div class="item"><img src="assets/images/1637093232260.jpeg" alt="The Last of us"></div>
-            <div class="item"><img src="assets/images/kia_card-tout_telluride.jpg" alt="The Last of us"></div>
-
-        </div>
-        Arrows owl carousel 
-        <div class="arrows">
-            <img src="assets/images/left.png" class="customNextBtn" alt="">
-            <img src="assets/images/right.png" class="customPrevBtn" alt="">
-        </div>
-
-    </div> -->
 
     <!-- Vega-kia -->
     <section id="vega-kia" class="section_kia">
@@ -369,7 +356,7 @@
 
     </section>
 
-    <footer>
+    <footer> 
         <div class="container">
             <div class="row">
 
@@ -417,7 +404,7 @@
                 <div class="col-md-3">
                     <div class="footer_menu_itens">
                         <h3>Modelos</h3>
-                        <ul>
+                        <ul class="modelos">
                             <li><b>Central de atendimento:</b></li>
                             <li>91 - 3025.3251</li>
                             <li><b>Whatsapp:</b></li>
@@ -447,8 +434,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
 
     <script src="assets/js/jquery.flexslider.js"></script>
 
