Continuando no ajuste mobile: rodape, botoes form e carousel

--- a/index.html
+++ b/index.html
@@ -419,10 +419,11 @@
         </div>
 
         <div class="container-fluid copyright">
-            <div class="container" style=" display: flex; align-items: center;">
-                <div class="col-md-6"> <img src="assets/images/ibama.png" alt="IBAMA"> No trânsito, dê sentido à vida.
+            <div class="container" >
+                <div class="row">
+                    <div class="col-md-6 text-left"><img src="assets/images/ibama.png" alt="IBAMA"> No trânsito, dê sentido à vida.</div>
+                    <div class="col-md-6 text-right">© Copyright 2022 Grupo Vega. Todos os direitos reservados.</div>
                 </div>
-                <div class="col-md-6 text-right">© Copyright 2022 Grupo Vega. Todos os direitos reservados.</div>
             </div>
         </div>
 
