--- a/index.html
+++ b/index.html
@@ -171,12 +171,7 @@
                     <div class="row">
                         <div class="col-md-4">
 
-                            <div class="wrap_card_car">
-                                <div class="card_car">
-                                    <img class="img-responsive" src="assets/images/1637093221182.jpeg" alt="">
-                                    <h3>Kia Carnival</h3>
-                                </div>
-                            </div>
+                            <div class="wrap_cards_car">
 
                             <div class="wrap_card_car">
                                 <div class="card_car">
@@ -198,6 +193,15 @@
                                     <h3>Kia Carnival</h3>
                                 </div>
                             </div>
+
+                            <div class="wrap_card_car">
+                                <div class="card_car">
+                                    <img class="img-responsive" src="assets/images/1637093221182.jpeg" alt="">
+                                    <h3>Kia Carnival</h3>
+                                </div>
+                            </div>
+                        </div>
+
 
                         </div>
                         <div class="col-md-8">
